--- a/docs/change/1.md
+++ b/docs/change/1.md
@@ -4,3 +4,5 @@
 
 1. [山大-23计算机myh分享](/University-Guide/shandong/sdu/1/)
 2. [中大-23旅游管理csy分享](/University-Guide/guangdong/sysu/1/)
+3. [武汉大学饮食大测评](/University-Guide/hubei/whu/1/)
+4. [喜欢上热搜的大学……](/University-Guide/hubei/whu/2/)
