--- a/docs/guangdong/jnu/1.md
+++ b/docs/guangdong/jnu/1.md
@@ -1,6 +1,6 @@
 # 乌贼分享
 
-学校概述（石牌校区）
+## 学校概述（石牌校区）
 
 本人就读于石牌校区的临床医学专业，所以对学校的概述可能主要以本专业的情况视角出发，其他专业应该大差不差，具体以学校官网公告为主
 
@@ -14,7 +14,7 @@
 
 学校大门有3个，北门，南门，西门，还有几个小门，学校整体不大，从23级开始就不让办校园牌了，也就是说不能开电动车了，但是之前办了牌子的是可以正常开的
 
-学习与保研情况
+## 学习与保研情况
 
 石牌校区有一个主要的教学楼，一个图书馆，行政楼，以及其他各个专业的楼（体育学院，经济学院，理工学院，医学院等等），所以学校小是有学校小的好处的，不会出现上一节课在这个教学楼下一节课就要在课件跑到下一个教学楼的情况，但是电梯会比较难等，人多的时候
 
@@ -24,7 +24,7 @@
 
 这部分大概就这么多了，因为这方面的情况比较复杂，各个专业也不太一样，我了解也不是很多，怕误导大家，所以具体的信息还是要等大家进入学校后自行了解
 
-住宿与食堂
+## 住宿与食堂
 
 丑话说在前面，暨大的住宿与食堂口碑好像貌似一直都不大好（很差），想要报考的话确实是要做好一定的心理建设，本人的感受貌似也不会太好，所以我尽量以客观的角度进行评价
 
@@ -42,7 +42,7 @@
 
 总而言之，就一句话，住宿和食堂要做好心理准备（我应该尽量客观了吧，应该）
 
-其他方面
+## 其他方面
 
 暨大没有强制性的校园跑（至少我们专业没有），但是也有跑团，可以加综测啥的，也有相应的奖励
 
