完善：动态索引省份

--- a/blog/2026-02-03-hubei-whu-1.md
+++ b/blog/2026-02-03-hubei-whu-1.md
@@ -2,7 +2,7 @@
 slug: hubei-whu-1
 title: 武汉大学饮食大测评
 authors: [jiarandiyi]
-tags: [武汉大学, 校园生活, 武汉]
+tags: [武汉大学, 校园生活, 武汉, 湖北]
 date: 2026-02-03
 ---
 
