--- a/blog/2026-02-03-hubei-whu-2.md
+++ b/blog/2026-02-03-hubei-whu-2.md
@@ -2,7 +2,7 @@
 slug: hubei-whu-2
 title: 喜欢上热搜的大学……
 authors: [jiarandiyi]
-tags: [武汉大学, 个人感悟, 法学院, 武汉]
+tags: [武汉大学, 个人感悟, 法学院, 武汉, 湖北]
 date: 2026-02-03
 ---
 
