--- a/blog/2026-02-04-gansu-lzu-1.md
+++ b/blog/2026-02-04-gansu-lzu-1.md
@@ -2,7 +2,7 @@
 slug: gansu-lzu-1
 title: 卡萨布兰卡分享
 authors: [kasabulanka]
-tags: [兰州大学, 保研, 校园生活, 考研, 兰州]
+tags: [兰州大学, 保研, 校园生活, 考研, 兰州, 甘肃]
 date: 2026-02-04
 ---
 
